# Massively-Parallel-Query-Processing-on-Heterogeneous-Architecture

./: .gitignore  CREDITS.md  Makefile  Makefile.am  README  README.md  bootstrap  common.am  configure.ac  index.html  initial.cmd  main.cu  out_ss  out_vv  params.json
backup/: Makefile  analysis.cu  analysis.cu.high  binary_bvh.h  mpes.h  mphr.h  mpts.h  openmp_rtree.c  priority_queue_linkSibling.h
example/: Makefile  app  main.cpp  particle.cpp  particle.h  v3.cpp  v3.h
generator/: Makefile  cuRAND  cuRAND.cpp
header/: bvh.h  common.h  hilbert.h  host.h  index_128t.h  index_16.h  index_16t.h  index_256.h  index_32.h  index_32t.h  index_512.h  index_64.h  morton.h  mpes.h.bak  radix.h.bak  rtree.h  shortstack.h
script/: comp.sh  cp.sh  cp2.sh  do.sh  exp_dim.sh  exp_dim2.sh  exp_gld_hit.sh  n1_g0.sh  n1_g5.sh  n1_g7.sh  n1_g8.sh  n2_g0.sh  n2_g2.sh  n2_g3.sh  n2_g6.sh  ndata_exp.sh  prepare_degree_exp.sh  run2.sh  selectionRatio.rb  sratio_exp.sh
scripts/: bank_check.sh  bank_test_ss.sh  dims_exp.sh  exp.sh  exp_degee.sh  exp_gld_trans_node001.sh  exp_simd.sh  generateHilbertIndex.c  memory.sh  n1_g1.sh  n1_g2.sh  n1_g3.sh  n1_g4.sh  n1_g6.sh  n2_g1.sh  n2_g4.sh  n2_g5.sh  n2_g7.sh  n2_g8.sh  out.gld_trans.sh  query_events  query_metrics  run.sh  run1.sh  test.sh  tmp.sh
src/: Makefile  Makefile.am  bvh.cu  index.h  index_4.h  mpes.cu  mpts.cu  radix.cu  rtree.cu  shortstack.cu  test.c
src/common/: Makefile  Makefile.am  branch.h  bvh.h  common.cu  common.h  config.h  evaluator.cpp  evaluator.h  global.h  logger.h  macro.h  node.h  point.cpp  point.h  rect.cpp  rect.h  structures.h  types.cpp  types.h
src/evaluator/: Makefile  evaluator.cpp  evaluator.h  logger.cpp  recorder.cpp  recorder.h
src/index/: index_2t.h  index_64t.h
src/io/: Makefile  dataset.cpp  dataset.h
src/legacy/: bvh.h  common.cu  common.h  global.cu  global.h  host.cu  index_2.h  index_4t.h  index_8.h  index_8t.h  main.cu  structures.h
src/legacy/structures/: bvh.cu  mpes.h  mphr.cu  mpts.h  parentLink.h
src/main/: Makefile  main.cpp
src/manager/: Makefile  chunk_manager.cpp  chunk_manager.h
src/mapper/: Makefile  Makefile.am  hilbert.c  hilbert_curve.cpp  hilbert_curve.h  hilbert_macro.h  hilbert_mapper.cpp  hilbert_mapper.h  kmeans_macro.h  kmeans_mapper.cpp  kmeans_mapper.h  mapper.h  morton.cpp  morton.h
src/node/: Makefile  branch.cpp  branch.h  g_node.cpp  g_node.h  leaf_node.cpp  leaf_node.h  node.cpp  node.h  node_soa.cpp  node_soa.h  rect.cpp  rect.h
src/sort/: Makefile  parallel_sorter.cpp  parallel_sorter.h  sorter.cpp  sorter.h  thrust_sort.cpp  thrust_sort.h  thrust_sorter.cpp  thrust_sorter.h
src/structures/: mphr.h  parentLink.cu  radix.h  skippointer.cu  skippointer.h
src/transformer/: Makefile  node_transformer.cpp  node_transformer.h  transformer.cpp  transformer.h
src/tree/: Makefile  bvh.cpp  bvh.h  hybrid.cpp  hybrid.h  mphr.cpp  mphr.h  rtree.cpp  rtree.h  rtree_ls.cpp  rtree_ls.h  rtree_ori.h  tree.cpp  tree.h
tests/: Makefile  Makefile.am
