## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# COMMON
######################################################################

common_FILES = \
               common/point.cpp

common_INCLUDES = \
                 -I$(srcdir)/common    
