## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# MAPPER
######################################################################

mapper_FILES = \
               mapper/hilbert_curve.cpp

mapper_INCLUDES = \
                 -I$(srcdir)/mapper    
